# Agility-Teams-Manager

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  Agility Teams Manager.sublime-workspace  NetrwTreeListing  Procfile  Project.sublime-workspace  README.md  app.py  developpement.html  genindex.html  index.html  mail.html  objects.inv  old_app.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  signup_mail.html
.devcontainer/: devcontainer.json
.github/workflows/: doc.yml  mypy.yml  update-requirements.yml
_modules/: index.html
_modules/app/: data.html
_sources/: developpement.rst.txt
_sources/developpement/: app.rst.txt  data.rst.txt  modules.rst.txt
app/: common.py  env.py  utils.py
app/backend/: app.py  root.py  server.py
app/controllers/: root.py  server.py  static.py
app/data/: README.md  __init__.py
app/mail/: gmail.py
app/views/: mail.html
cache/competitions/: Agility.json
conf/: cache.json
data/: README.md  users.csv
developpement/: app.html  data.html  modules.html
docs/source/: conf.py  index.rst
lib/firefox/: application.ini  crashreporter  firefox  firefox-bin  firefox-bin.sig  firefox.sig  libxul.so.sig  (+9 more)
modules/: utils.py
public/: manifest.json
pyprogesco/: __init__.py
samples/: Résultats en direct 2.html  Résultats en direct 3.html  Résultats en direct.html  orga_event_principal_list.html
scripts/: clear_data.sh  export_dependencies.sh
static/: app.css  style.css
templates/: app.html  app_new.html  index.html  login.html  main_app.html  signup.html
(+121 files in other folders)
