[tool.poetry]
name = "progesco-teams"
version = "0.1.0"
description = "Classements par équipe pour PROGESCO"
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]
requests = {extras = ["security"], version = "^2.27.1"}
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
