[tool.poetry]
name = "progesco-teams"
version = "0.1.0"
description = "Classements par équipe pour PROGESCO"
authors = ["Virinas-code <alexcode228@gmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.7.1"
dateparser = "^1.1.0"
coloredlogs = "^15.0.1"
google-api-python-client = "^2.39.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.0"
gunicorn = "^20.1.0"
oauth2client = "^4.1.3"
verboselogs = "^1.7"

[tool.poetry.dev-dependencies]
requests = {extras = ["security"], version = "^2.27.1"}
gunicorn = "^20.1.0"
furo = "^2022.3.4"
flake8 = "^4.0.1"
pylint = "^2.13.5"
mypy = "^0.942"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
